--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+
 {% load static %}
+
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
